--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/logos/IH_logo.pnG" alt="..." />
+                                <img class="img-fluid" src="assets/img/logos/IH_logo.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Inst House</div>
